Fix overlapping text of slider.
Legacy slider with `#slider-wrapper` was working properly. So treat all
slider block with `.sliderWrapper` similarly.
This change also uses `2%` as the padding for the text on mobile
devices.

--- a/ftw/slider/browser/resources/onegovtheme.sass
+++ b/ftw/slider/browser/resources/onegovtheme.sass
@@ -134,10 +134,14 @@ $slider-color: contrast($slider-bg-start, #FFF, #000);
     #slider-panes {
       background: $slider-bg-end;
     }
-    #container #slider-wrapper .sliderText {
-      position: relative;
-      width: 96%;
-      padding: 2%;
+    #container {
+      #slider-wrapper, .sliderWrapper {
+        .sliderText {
+          position: relative;
+          padding: 2%;
+          box-sizing: border-box;
+        }
+      }
     }
 
 }
